--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,15 @@
   <artifactId>LeetcodeDYI</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - LeetcodeDYI</name>
-  <url>http://maven.apache.org</url><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId>
+  <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version>
+        </dependency>
+    </dependencies>
+    <build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId>
   <configuration>
     <source>21</source>
     <target>21</target>
